--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
 <html>
 	<head>
 		<title>OASIS 2017 | Intro</title>
+			<meta charset="UTF-8">
+		<meta name="description" content="Snatches of whatever your teacher’s been droning on about for the past hour, would weave in and out of your fantasies, to be interrupted when she hurls her chalk at you.Hours made to stand outside the class and silly impositions would follow. Middle school was dumb. Your attention span hasn't really changed much here in college though, has it?It’s only fair. Who wouldn’t be wrestling orcs at Amon Hen, or duelling the Dark Lord in the Battle of Hogwarts? Perhaps battle in the Lannisters’ army, in their fight to keep the Iron throne, all the while ignoring the lecturer as he tries to give you an actual future? Yeah, we thought so. Join us this Oasis ‘17, the 46th edition of BITS Pilani’s annual cultural festival from the 31st October to the 3rd November, with some of the biggest music acts such as Parikrama and Amit Trivedi, and public figures such as Salman Khurshid and Kiran Bedi all a part of its proud history. From games, to mouth watering food stalls and exhilarating concerts, we promise them all.Join us, as we bring to life these Realms of Fiction, from Gotham and Winterfell to Avalon and Vice City. Oasis ‘17. Bigger than ever.">
+  <meta name="keywords" content="Oasis, Cultural Festival, cultfest, cult fest, bits pilani, oasis 2017, Realms of fiction, bits cultural fest, rocktaves, metamorphosis oasis, fashp, fashp oasis, bits fest, birla institute of technology and science">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
+  <meta name="copyright" content="Copyright © 2017 Department Of Visual Media, BITS Pilani">
+  <meta name="author" content="Department Of Visual Media, BITS Pilani">
+  <meta name="email" content="dvm@bits-oasis.org">
+  <meta name="rating" content="general">
+  <meta name="distribution" content="Global">
+  <meta name="revisit-after" content="1 days">
+ <!--  <meta name="google-site-verification" content="27wdEH_BewhaCUC8-dUDeSZtwjjN4m0L8AbzyS8Q3ko"> -->
+
+  <!-- OPEN GRAPH META DATA-->
+  <meta property="og:title" content="OASIS 2017 | Realms of fiction | BITS Pilani">
+  <meta property="og:site_name" content="OASIS Website">
+  <meta property="og:url" content="http://www.bits-oasis.org/">
+  <meta property="og:description" content="Snatches of whatever your teacher’s been droning on about for the past hour, would weave in and out of your fantasies, to be interrupted when she hurls her chalk at you.Hours made to stand outside the class and silly impositions would follow. Middle school was dumb. Your attention span hasn't really changed much here in college though, has it?It’s only fair. Who wouldn’t be wrestling orcs at Amon Hen, or duelling the Dark Lord in the Battle of Hogwarts? Perhaps battle in the Lannisters’ army, in their fight to keep the Iron throne, all the while ignoring the lecturer as he tries to give you an actual future? Yeah, we thought so. Join us this Oasis ‘17, the 46th edition of BITS Pilani’s annual cultural festival from the 31st October to the 3rd November, with some of the biggest music acts such as Parikrama and Amit Trivedi, and public figures such as Salman Khurshid and Kiran Bedi all a part of its proud history. From games, to mouth watering food stalls and exhilarating concerts, we promise them all.Join us, as we bring to life these Realms of Fiction, from Gotham and Winterfell to Avalon and Vice City. Oasis ‘17. Bigger than ever.">
+  <meta property="og:image" content="http://bits-oasis.org/img/fbshareMain.png">
+  <meta property="og:type" content="website">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="./assets/css/fonts.css">
 
@@ -14,7 +34,7 @@
 		<link rel="stylesheet" href="./assets/css/regstyle.css">
 		
 		<style id="keep_at_end"></style>
-		<meta charset="UTF-8">
+	
 	</head>
 	<body>
 		<!--   nav bar -->
@@ -276,18 +296,18 @@
 							<div class="image-main"></div>
 							<div class="content">
 								<h2>ABOUT US</h2>
-								<p>Snatches of whatever your teacher’s been droning on about for the past hour, would weave in and out of your fantasies, to be interrupted when she hurls her chalk at you.<br>
+								<p>Snatches of whatever your teacher’s been droning on about for the past hour <span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span>  would weave in and out of your fantasies<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> to be interrupted when she hurls her chalk at you.<br>
 
 Hours made to stand outside the class and silly impositions would follow. 
 <br>
 
-Middle school was dumb. Your attention span hasn't really changed much here in college though, has it?
+Middle school was dumb. Your attention span hasn't really changed much here in college though<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span>has it?
 <br>
-It’s only fair. Who wouldn’t be wrestling orcs at Amon Hen, or duelling the Dark Lord in the Battle of Hogwarts? Perhaps battle in the Lannisters’ army, in their fight to keep the Iron throne, all the while ignoring the lecturer as he tries to give you an actual future? Yeah, we thought so. 
+It’s only fair. Who wouldn’t be wrestling orcs at Amon Hen<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> or duelling the Dark Lord in the Battle of Hogwarts? Perhaps battle in the Lannisters’ army<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> in their fight to keep the Iron throne<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> all the while ignoring the lecturer as he tries to give you an actual future? Yeah<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> we thought so. 
 <br>
-Join us this Oasis ‘17, the 46th edition of BITS Pilani’s annual cultural festival from the 31st October to the 3rd November, with some of the biggest music acts such as Parikrama and Amit Trivedi, and public figures such as Salman Khurshid and Kiran Bedi all a part of its proud history. From games, to mouth watering food stalls and exhilarating concerts, we promise them all.
+Join us this Oasis ‘17<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> the 46th edition of BITS Pilani’s annual cultural festival from the 31st October to the 3rd November<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> with some of the biggest music acts such as Parikrama and Amit Trivedi<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> and public figures such as Salman Khurshid and Kiran Bedi all a part of its proud history. From games<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> to mouth watering food stalls and exhilarating concerts<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> we promise them all.
 <br>
-Join us, as we bring to life these Realms of Fiction, from Gotham and Winterfell to Avalon and Vice City. 
+Join us, as we bring to life these Realms of Fiction<span style="font-size: 50px;color:#fff; line-height: 10px;">&#44;</span> from Gotham and Winterfell to Avalon and Vice City. 
 <br>
 
 Oasis ‘17. Bigger than ever.</p>
